<?xml version="1.0"?>
<package format="2">
  <name>aecobot_manipulator_h_interface</name>
  <version>1.0.0</version>
  <description>
    This packages based on MoveIt! framework to manipulate OpenManipulator
  </description>
  <license>BSD</license>
  <author email="jaewoo127@naver.com">Jaewoo Yoon</author>
  <author email="rotnn429@naver.com">Jungeun Lee</author>
  <author email="210321@naver.com">Deukkyoung Yoon</author>
  <maintainer email="jaewoo127@naver.com">Jaewoo Yoon</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>  
  <depend>aecobot_manipulator_h_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>eigen</depend>
</package>
